--- a/stylesheets/components/Quote.scss
+++ b/stylesheets/components/Quote.scss
@@ -300,10 +300,8 @@
 }
 
 .module-quote__icon-container__icon--image {
-  @include color-svg(
-    '../images/icons/v3/photo/photo-square.svg',
-    $color-ultramarine
-  );
+  @include color-svg('../images/icons/v3/photo/photo-square.svg',
+    $color-ultramarine );
 }
 
 .module-quote__icon-container__icon--microphone {
@@ -311,10 +309,8 @@
 }
 
 .module-quote__icon-container__icon--play {
-  @include color-svg(
-    '../images/icons/v3/play/play-fill.svg',
-    $color-ultramarine
-  );
+  @include color-svg('../images/icons/v3/play/play-fill.svg',
+    $color-ultramarine );
 }
 
 .module-quote__icon-container__icon--movie {
@@ -322,10 +318,8 @@
 }
 
 .module-quote__icon-container__icon--view-once {
-  @include color-svg(
-    '../images/icons/v3/view_once/view_once.svg',
-    $color-ultramarine
-  );
+  @include color-svg('../images/icons/v3/view_once/view_once.svg',
+    $color-ultramarine );
 }
 
 .module-quote__generic-file {
@@ -374,6 +368,14 @@
   flex-direction: row;
   align-items: center;
 
+  background-color: $color-white-alpha-40;
+
+  @include dark-theme {
+    background-color: $color-black-alpha-50;
+  }
+
+  border-color: white;
+
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   border-inline-start-style: solid;
@@ -386,33 +388,25 @@
   width: 16px;
 
   @include light-theme {
-    @include color-svg(
-      '../images/icons/v3/link/link-slash.svg',
-      $color-gray-90
-    );
+    @include color-svg('../images/icons/v3/link/link-slash.svg',
+      $color-gray-90 );
   }
 
   @include dark-theme {
-    @include color-svg(
-      '../images/icons/v3/link/link-slash.svg',
-      $color-gray-05
-    );
+    @include color-svg('../images/icons/v3/link/link-slash.svg',
+      $color-gray-05 );
   }
 }
 
 .module-quote__reference-warning__icon--incoming {
   @include light-theme {
-    @include color-svg(
-      '../images/icons/v3/link/link-slash.svg',
-      $color-gray-90
-    );
+    @include color-svg('../images/icons/v3/link/link-slash.svg',
+      $color-gray-90 );
   }
 
   @include dark-theme {
-    @include color-svg(
-      '../images/icons/v3/link/link-slash.svg',
-      $color-gray-05
-    );
+    @include color-svg('../images/icons/v3/link/link-slash.svg',
+      $color-gray-05 );
   }
 }
 
@@ -437,7 +431,7 @@
 }
 
 .module-message {
-  .module-message__author + .module-quote__container {
+  .module-message__author+.module-quote__container {
     margin-top: 3px;
 
     .module-quote {
